1.	suggest: Added crash-proof retries — timeouts/HTTP2 CANCEL/connection resets now use exponential backoff; a failed batch no longer aborts the run and partial results are still written. 	2.	LLM clients: Sanitize control characters before sending; sturdier request headers; exponential backoff on 429/5xx; DeepSeek base URL auto-normalized with /v1. 	3.	Added package-refactor command for semantic renaming of obfuscated package/folder names.